[package]
name = "async_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["sync"] }
